# elite-dangerous-astraeus

./: .gitignore  Makefile  README.md  nx.json  package-lock.json  package.json  pyproject.toml
.github/linters/: .flake8.ini  .jscpd.json  .mypy.ini
.github/workflows/: ci.yml  linter.yml
astraeus-common/: README.md  project.json  pyproject.toml
astraeus-common/src/astraeus_common/decorator/: logit.py
astraeus-common/src/astraeus_common/error/: body_not_found.py  sync_state_not_found.py  system_not_found.py
astraeus-common/src/astraeus_common/io/: database.py  file.py
astraeus-common/src/astraeus_common/io/db/: 001_initial_db_creation.py  002_add_sync_edsm_state_following.py  003_add_eddn_messages.py
astraeus-common/src/astraeus_common/models/: body.py  eddn_msg.py  sync_state.py  system.py
astraeus-common/src/astraeus_common/utils/: thread_safe_list.py
docker/init-scripts/: initial-db-schema.sh
